--- a/sales.html
+++ b/sales.html
@@ -10,6 +10,7 @@
     <header></header>
     <main>
         <section id="section"></section>
+        <table id="table">Selling Table</table>
     </main>
     <footer></footer>
     <script src="./JS/app.js"></script>
