--- a/sales.html
+++ b/sales.html
@@ -9,6 +9,20 @@
 <body>
     <header></header>
     <main>
+        <form action="" id="salmonform">
+            <fieldset>
+                <legend id="title">Add a branch to Salmon Cookies</legend>
+                <label class="inputs" for="Location">Store name</label>
+                <input class="inputs" type="text" name = 'Location' id="Location">
+                <label class="inputs" for="minCustomers">Minimum Customers</label>
+                <input class="inputs" type="text" name = 'minCustomers' id="minCustomers">
+                <label class="inputs" for="maxCustomers">Maximum Customers</label>
+                <input class="inputs" type="text" name = 'maxCustomers' id="maxCustomers">
+                <label class="inputs" for="avgSales">Average Sales</label>
+                <input class="inputs" type="text" name = 'avgSales' id="avgSales"> 
+                <input id="btn" type="submit" value="Add Branch">
+            </fieldset>
+        </form>
         <section id="section"></section>
         <table id="table">Selling Table</table>
     </main>
